working load to sqlite3
NAKA JUPYTER NOTEBOOK PALANG

--- a/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
+++ b/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
@@ -1468,25 +1468,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "5e2fc98e-d837-4762-9ca3-7cd88d07ff61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load Dimensions\n",
-    "db_connection = sqlite3.connect('../../database/weekly_view.db')\n",
+    "db_connection = sqlite3.connect('../../database/shopzada.db')\n",
     "cursor = db_connection.cursor()\n",
-    "df_order_dimension.to_sql('order_dimension', db_connection, index=False, if_exists='replace')\n",
-    "df_product_dimension.to_sql('product_dimension', db_connection, index=False, if_exists='replace')\n",
-    "df_user_dimension.to_sql('user_dimension', db_connection, index=False, if_exists='replace')\n",
-    "df_staff_dimension.to_sql('staff_dimension', db_connection, index=False, if_exists='replace')\n",
-    "df_merchant_dimension.to_sql('merchant_dimension', db_connection, index=False, if_exists='replace')\n",
-    "df_campaign_dimension.to_sql('campaign_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_order_dimension.to_sql('order_dimension', db_connection, index=False, if_exists='append')\n",
+    "df_product_dimension.to_sql('product_dimension', db_connection, index=False, if_exists='append')\n",
+    "df_user_dimension.to_sql('user_dimension', db_connection, index=False, if_exists='append')\n",
+    "df_staff_dimension.to_sql('staff_dimension', db_connection, index=False, if_exists='append')\n",
+    "df_merchant_dimension.to_sql('merchant_dimension', db_connection, index=False, if_exists='append')\n",
+    "df_campaign_dimension.to_sql('campaign_dimension', db_connection, index=False, if_exists='append')\n",
     "\n",
     "\n",
     "\n",
     "# Load Factable"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "79b32982-df06-4aa0-ad00-19a1c01289c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   CAMPAIGN_ID           10 non-null     object\n",
+      " 1   CAMPAIGN_NAME         10 non-null     object\n",
+      " 2   CAMPAIGN_DESCRIPTION  10 non-null     object\n",
+      " 3   CAMPAIGN_DISCOUNT     10 non-null     object\n",
+      " 4   CAMPAIGN_WRITER       10 non-null     object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 532.0+ bytes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CAMPAIGN_ID</th>\n",
+       "      <th>CAMPAIGN_NAME</th>\n",
+       "      <th>CAMPAIGN_DESCRIPTION</th>\n",
+       "      <th>CAMPAIGN_DISCOUNT</th>\n",
+       "      <th>CAMPAIGN_WRITER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CAMPAIGN24776</td>\n",
+       "      <td>WOULDN'T YOU KNOW IT</td>\n",
+       "      <td>Twee retro vinyl single-origin coffee sartoria...</td>\n",
+       "      <td>1%</td>\n",
+       "      <td>RALEIGH SENGER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAMPAIGN33679</td>\n",
+       "      <td>COULD BE WRITTEN ON THE BACK OF A POSTAGE STAMP</td>\n",
+       "      <td>Fanny pack gentrify cardigan messenger bag.</td>\n",
+       "      <td>1%</td>\n",
+       "      <td>BRADLEY STAMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CAMPAIGN49972</td>\n",
+       "      <td>ME NEITHER</td>\n",
+       "      <td>DIY pug leggings everyday craft beer cardigan ...</td>\n",
+       "      <td>10%</td>\n",
+       "      <td>TREMAYNE NADER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CAMPAIGN61872</td>\n",
+       "      <td>ON THE HUH</td>\n",
+       "      <td>Trust fund pinterest chambray.</td>\n",
+       "      <td>5%</td>\n",
+       "      <td>CLAUDE AUFDERHAR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CAMPAIGN03110</td>\n",
+       "      <td>STICK A FORK IN IT</td>\n",
+       "      <td>YOLO tumblr Yuccie austin.</td>\n",
+       "      <td>1%</td>\n",
+       "      <td>JORDI KUNDE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CAMPAIGN_ID                                    CAMPAIGN_NAME  \\\n",
+       "0  CAMPAIGN24776                             WOULDN'T YOU KNOW IT   \n",
+       "1  CAMPAIGN33679  COULD BE WRITTEN ON THE BACK OF A POSTAGE STAMP   \n",
+       "2  CAMPAIGN49972                                       ME NEITHER   \n",
+       "3  CAMPAIGN61872                                       ON THE HUH   \n",
+       "4  CAMPAIGN03110                               STICK A FORK IN IT   \n",
+       "\n",
+       "                                CAMPAIGN_DESCRIPTION CAMPAIGN_DISCOUNT  \\\n",
+       "0  Twee retro vinyl single-origin coffee sartoria...                1%   \n",
+       "1        Fanny pack gentrify cardigan messenger bag.                1%   \n",
+       "2  DIY pug leggings everyday craft beer cardigan ...               10%   \n",
+       "3                     Trust fund pinterest chambray.                5%   \n",
+       "4                         YOLO tumblr Yuccie austin.                1%   \n",
+       "\n",
+       "    CAMPAIGN_WRITER  \n",
+       "0    RALEIGH SENGER  \n",
+       "1     BRADLEY STAMM  \n",
+       "2    TREMAYNE NADER  \n",
+       "3  CLAUDE AUFDERHAR  \n",
+       "4       JORDI KUNDE  "
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_campaign_dimension.info()\n",
+    "df_campaign_dimension.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae79fc2-cc62-44d2-a3cf-d8d74daa1de8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
